// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowWithTextInput renders 1`] = `
<Row
  accessibilityLabel="Input, text field"
  accessible={false}
  title=""
>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "flex": 1,
        },
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
  />
</Row>
`;

exports[`RowWithTextInput renders with a title 1`] = `
<Row
  accessibilityLabel="Title, text field"
  accessible={false}
  accessories={
    <View
      style={
        Object {
          "height": 30,
          "width": 50,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "flex": 1,
            },
            Object {
              "textAlign": "right",
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
  }
  onPress={[Function]}
  title="Title"
/>
`;
